syntax = "proto3";

package activites;

// ========== TYPE ACTIVITE SERVICE ==========
service TypeActiviteService {
  rpc Create(CreateTypeActiviteRequest) returns (TypeActivite);
  rpc Update(UpdateTypeActiviteRequest) returns (TypeActivite);
  rpc Get(GetTypeActiviteRequest) returns (TypeActivite);
  rpc GetByCode(GetTypeActiviteByCodeRequest) returns (TypeActivite);
  rpc List(ListTypeActiviteRequest) returns (ListTypeActiviteResponse);
  rpc Delete(DeleteTypeActiviteRequest) returns (DeleteResponse);
}

message TypeActivite {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateTypeActiviteRequest {
  string code = 1;
  string nom = 2;
  string description = 3;
}

message UpdateTypeActiviteRequest {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
}

message GetTypeActiviteRequest {
  string id = 1;
}

message GetTypeActiviteByCodeRequest {
  string code = 1;
}

message ListTypeActiviteRequest {
  Pagination pagination = 1;
}

message ListTypeActiviteResponse {
  repeated TypeActivite types = 1;
  PaginationResult pagination = 2;
}

message DeleteTypeActiviteRequest {
  string id = 1;
}

// ========== ACTIVITE SERVICE ==========
service ActiviteService {
  rpc Create(CreateActiviteRequest) returns (Activite);
  rpc Update(UpdateActiviteRequest) returns (Activite);
  rpc Get(GetActiviteRequest) returns (Activite);
  rpc ListByClient(ListActiviteByClientRequest) returns (ListActiviteResponse);
  rpc ListByContrat(ListActiviteByContratRequest) returns (ListActiviteResponse);
  rpc List(ListActiviteRequest) returns (ListActiviteResponse);
  rpc Delete(DeleteActiviteRequest) returns (DeleteResponse);
}

message Activite {
  string id = 1;
  string type_id = 2;
  string date_activite = 3;
  string sujet = 4;
  string commentaire = 5;
  string echeance = 6;
  string client_base_id = 7;
  string contrat_id = 8;
  string client_partenaire_id = 9;
  string created_at = 10;
  string updated_at = 11;
}

message CreateActiviteRequest {
  string type_id = 1;
  string date_activite = 2;
  string sujet = 3;
  string commentaire = 4;
  string echeance = 5;
  string client_base_id = 6;
  string contrat_id = 7;
  string client_partenaire_id = 8;
}

message UpdateActiviteRequest {
  string id = 1;
  string type_id = 2;
  string date_activite = 3;
  string sujet = 4;
  string commentaire = 5;
  string echeance = 6;
}

message GetActiviteRequest {
  string id = 1;
}

message ListActiviteByClientRequest {
  string client_base_id = 1;
  Pagination pagination = 2;
}

message ListActiviteByContratRequest {
  string contrat_id = 1;
  Pagination pagination = 2;
}

message ListActiviteRequest {
  string search = 1;
  string type_id = 2;
  Pagination pagination = 3;
}

message ListActiviteResponse {
  repeated Activite activites = 1;
  PaginationResult pagination = 2;
}

message DeleteActiviteRequest {
  string id = 1;
}

// ========== TACHE SERVICE ==========
service TacheService {
  rpc Create(CreateTacheRequest) returns (Tache);
  rpc Update(UpdateTacheRequest) returns (Tache);
  rpc Get(GetTacheRequest) returns (Tache);
  rpc List(ListTacheRequest) returns (ListTacheResponse);
  rpc ListByAssigne(ListTacheByAssigneRequest) returns (ListTacheResponse);
  rpc ListByClient(ListTacheByClientRequest) returns (ListTacheResponse);
  rpc ListByContrat(ListTacheByContratRequest) returns (ListTacheResponse);
  rpc ListByFacture(ListTacheByFactureRequest) returns (ListTacheResponse);
  rpc ListEnRetard(ListTacheEnRetardRequest) returns (ListTacheResponse);
  rpc GetStats(GetTacheStatsRequest) returns (TacheStats);
  rpc GetAlertes(GetTacheAlertesRequest) returns (TacheAlertes);
  rpc MarquerEnCours(MarquerTacheRequest) returns (Tache);
  rpc MarquerTerminee(MarquerTacheRequest) returns (Tache);
  rpc MarquerAnnulee(MarquerTacheRequest) returns (Tache);
  rpc Delete(DeleteTacheRequest) returns (DeleteResponse);
}

message Tache {
  string id = 1;
  string organisation_id = 2;
  string titre = 3;
  string description = 4;
  string type = 5;
  string priorite = 6;
  string statut = 7;
  string date_echeance = 8;
  string date_completion = 9;
  string assigne_a = 10;
  string cree_par = 11;
  string client_id = 12;
  string contrat_id = 13;
  string facture_id = 14;
  string regle_relance_id = 15;
  string metadata = 16;
  bool en_retard = 17;
  string created_at = 18;
  string updated_at = 19;
}

message TacheStats {
  int32 a_faire = 1;
  int32 en_cours = 2;
  int32 terminee = 3;
  int32 annulee = 4;
  int32 en_retard = 5;
  int32 total = 6;
}

message TacheAlertes {
  repeated Tache en_retard = 1;
  repeated Tache echeance_demain = 2;
}

message CreateTacheRequest {
  string organisation_id = 1;
  string titre = 2;
  string description = 3;
  string type = 4;
  string priorite = 5;
  string date_echeance = 6;
  string assigne_a = 7;
  string cree_par = 8;
  string client_id = 9;
  string contrat_id = 10;
  string facture_id = 11;
  string regle_relance_id = 12;
  string metadata = 13;
}

message UpdateTacheRequest {
  string id = 1;
  string titre = 2;
  string description = 3;
  string type = 4;
  string priorite = 5;
  string statut = 6;
  string date_echeance = 7;
  string assigne_a = 8;
  string client_id = 9;
  string contrat_id = 10;
  string facture_id = 11;
  string metadata = 12;
}

message GetTacheRequest {
  string id = 1;
}

message ListTacheRequest {
  string organisation_id = 1;
  string statut = 2;
  string type = 3;
  string priorite = 4;
  string search = 5;
  bool en_retard = 6;
  Pagination pagination = 7;
}

message ListTacheByAssigneRequest {
  string assigne_a = 1;
  string periode = 2;
  Pagination pagination = 3;
}

message ListTacheByClientRequest {
  string client_id = 1;
  Pagination pagination = 2;
}

message ListTacheByContratRequest {
  string contrat_id = 1;
  Pagination pagination = 2;
}

message ListTacheByFactureRequest {
  string facture_id = 1;
  Pagination pagination = 2;
}

message ListTacheEnRetardRequest {
  string organisation_id = 1;
  Pagination pagination = 2;
}

message GetTacheStatsRequest {
  string organisation_id = 1;
}

message GetTacheAlertesRequest {
  string organisation_id = 1;
}

message MarquerTacheRequest {
  string id = 1;
}

message ListTacheResponse {
  repeated Tache taches = 1;
  PaginationResult pagination = 2;
}

message DeleteTacheRequest {
  string id = 1;
}

// ========== EVENEMENT SUIVI SERVICE ==========
service EvenementSuiviService {
  rpc Create(CreateEvenementSuiviRequest) returns (EvenementSuivi);
  rpc Update(UpdateEvenementSuiviRequest) returns (EvenementSuivi);
  rpc Get(GetEvenementSuiviRequest) returns (EvenementSuivi);
  rpc ListByExpedition(ListEvenementByExpeditionRequest) returns (ListEvenementSuiviResponse);
  rpc List(ListEvenementSuiviRequest) returns (ListEvenementSuiviResponse);
  rpc Delete(DeleteEvenementSuiviRequest) returns (DeleteResponse);
}

message EvenementSuivi {
  string id = 1;
  string expedition_id = 2;
  string code = 3;
  string label = 4;
  string date_evenement = 5;
  string lieu = 6;
  string raw = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CreateEvenementSuiviRequest {
  string expedition_id = 1;
  string code = 2;
  string label = 3;
  string date_evenement = 4;
  string lieu = 5;
  string raw = 6;
}

message UpdateEvenementSuiviRequest {
  string id = 1;
  string code = 2;
  string label = 3;
  string date_evenement = 4;
  string lieu = 5;
  string raw = 6;
}

message GetEvenementSuiviRequest {
  string id = 1;
}

message ListEvenementByExpeditionRequest {
  string expedition_id = 1;
  Pagination pagination = 2;
}

message ListEvenementSuiviRequest {
  string search = 1;
  Pagination pagination = 2;
}

message ListEvenementSuiviResponse {
  repeated EvenementSuivi evenements = 1;
  PaginationResult pagination = 2;
}

message DeleteEvenementSuiviRequest {
  string id = 1;
}

// ========== COMMON MESSAGES ==========
message Pagination {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message PaginationResult {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

message DeleteResponse {
  bool success = 1;
}
